# aidlc-factory

./: .all-contributorsrc  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .grype.yaml  .markdownlint-cli2.yaml  .mcp.json  AGENTS.md  BUGFIX-PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-SYSTEMV2-PLAN.md  IMPROVEMENT-PLAN.md  LICENSE  NOTICES.md  OPENCODE-PORT-PLAN.md  ORCHESTRATOR-BUG-FIX-PLAN.md  ORCHESTRATOR-EVOLUTION-PLAN.md  ORCHESTRATOR-LIVE-TEST-FINDINGS.md  ORCHESTRATOR-PLAN.md  ORCHESTRATOR-SIMPLIFY-PLAN.md  ORCHESTRATOR-WORKFLOW-FIXES-PLAN.md  README.md  REMEDIATION-PLAN.md  UI-DESIGN-SYSTEM-PLAN.md  bugs.txt  complexity-threshold-plan.md  fast-path-plan.md  opencode.json  pyproject.toml  requirements.txt  skill-sources.yaml  tutorial_subagentes.md  unit-dependency-graph-fixes-plan.md  unit-dependency-graph-plan.md
.claude/: settings.json
.codex/: config.toml
.cursor/: mcp.json
.engram/: config.json
.github/: CODEOWNERS  copilot-commit-instructions.md  copilot-instructions.md  copilot-pull-request-instructions.md  copilot-review-instructions.md  labeler.yml  pull_request_template.md
aidlc-docs/: aidlc-state.md  audit.md  fast-path-log.md
aidlc-scripts/: factory_agent_discover.py  factory_audit_writes.py  factory_autoskills.py  factory_budget.py  factory_build_cache.py  factory_complexity.py  factory_conflict.py  factory_content_validate.py  factory_cost_estimate.py  factory_custom_skills.py  factory_design_system_extract_brownfield.py  factory_design_system_harness.py  factory_design_system_learn.py  factory_run.py  (+31 more)
(+540 files in other folders)
